<resources>
    <string name="app_name">My Application</string>
    <string name="write_a_new_config">write a new config</string>
    <string name="frequency_text">frequency</string>
    <string name="name_text">name</string>
    <string name="add_medicine">add medicine</string>
    <string name="medicine_1">Medicine 1</string>
    <string name="medicine_2">Medicine 2</string>
    <string name="medicine_6">Medicine 6</string>
    <string name="medicine_5">Medicine 5</string>
    <string name="medicine_4">Medicine 4</string>
    <string name="medicine_3">Medicine 3</string>
    <string name="cancel">cancel</string>
    <string name="confirm">Confirm</string>

    <array name="time_array">
        <item>Morning</item>
        <item>Afternoon</item>
        <item>night</item>
        <item>2 times</item>
        <item>3 times</item>
    </array>

    <array name="medicine_array">
        <item>Medicine 1</item>
        <item>Medicine 2</item>
        <item>Medicine 3</item>
        <item>Medicine 4</item>
        <item>Medicine 5</item>
        <item>Medicine 6</item>
    </array>

</resources>
